<resources>
    <string name="app_name">Batata Louk</string>


    //tela de login
    <string name="login_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_cadastrar">Ainda não tem conta? <b>Cadastre-se</b></string>

    //tela de cadastro (sign Up)
    <string name="signUp_signUp">Cadastro</string>
    <string name="signUp_name">Nome</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_password">Senha</string>
    <string name="signUp_confirmPassword">Confirmar a senha</string>
    <string name="signUp_cadastrar">Cadastrar</string>
    <string name="signUp_logar">Já possui uma conta? <b>Entrar</b></string>

    // Frame de alerta
    <string name="title">Ops...</string>
    <string name="UserAndPasswordInvalid">Usuário ou senha inválidos!</string>
    <string name="ErrorCpf">CEP inválido!</string>
    <string name="CadastroEndereco">Endereço cadastrado com sucesso!</string>
    <string name="PedidoSucesso">Pedido cadastrado com sucesso!</string>
    <string name="ok">OK</string>
    <string name="UserCreated">Usuário criado com sucesso!</string>
    <string name="UserAlreadyExist">Usuário já existe use outro email!</string>
    <string name="sucesso">Parabéns!</string>
    <string name="InvalidPassword">As senhas não se correspondem</string>
    <string name="erro_generico">Algo inesperado aconteceu. Tente novamente mais tarde</string>
    <string name="Atencao">Atenção!</string>
    <string name="Verifique">Verifique seu email para redefinir a senha.</string>
    <string name="Forgot">Email inválido!</string>

    // Fragment endereco

    <string name="title_enderecos_do_usuario">Endereços do usuário</string>
    <string name="nenhum_endereco_encontrado">Nenhum endereço encontrado</string>
    <string name="title_cadastrar_endereco">Cadastrar Endereço</string>
    <string name="procurar_cep_cadastrar_endereco">Procurar CEP</string>
    <string name="edit_text_cep_cadastro_endereco">Digite o CEP</string>
    <string name="salvar_novo_endereco">Salvar endereço</string>
    <string name="edit_text_number_cadastro_endereco">Digite o número da casa</string>

    // main
    <string name="main_sair">Logout</string>
    <string name="pedidos">Pedidos</string>
    <string name="meus_dados">Meus dados</string>
    <string name="historico_pedidos">Histórico de pedidos</string>
    <string name="forgot_confirmarEmail">Confirmar email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>