<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:background="@color/black">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="56dp"
                android:layout_marginBottom="120dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotothin"
                    android:text="@string/login_login"
                    android:textColor="@color/orange"
                    android:textSize="34sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/login_email"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/login_email"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"/>


                //Senha
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/login_password"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/login_password"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/esqueciMinhaSenha"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Esqueci minha senha"
                    android:textSize="12sp"
                    android:gravity="right|center_vertical"
                    android:clickable="true"
                    android:textColor="@color/white"

                    />

                <Button
                    android:id="@+id/login"
                    android:layout_marginTop="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/orange"
                    android:fontFamily="@font/robotothin"
                    android:textAllCaps="false"
                    android:text="@string/login_entrar"/>

            </LinearLayout>

            <TextView
                android:id="@+id/cadastrar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/robotolight"
                android:text="@string/login_cadastrar"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"
                android:textSize="14sp"
                android:clickable="true"
                android:gravity="center"
                />

    </RelativeLayout>



    </ScrollView>



</RelativeLayout>
