<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_batata"
    android:orientation="vertical"
    tools:context=".ui.activities.ForgotActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="56dp"
                android:layout_marginBottom="80dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="132dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_user" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/robotolight"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/forgot"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="36dp"
                    android:background="@color/orange"
                    android:fontFamily="@font/robotothin"
                    android:text="@string/forgot_confirmarEmail"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/logar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:fontFamily="@font/robotolight"
                    android:gravity="center"
                    android:text="@string/signUp_logar"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>


    </ScrollView>

</LinearLayout>